correct ie bug causing flickering when revealing the footer

--- a/Resources/Public/Less/General.less
+++ b/Resources/Public/Less/General.less
@@ -88,6 +88,9 @@ img.pp-nolazyload {
 #content.pp-reveal-footer {
     position: relative;
     z-index: 10;
+    /* correct flickering on ie edge */
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
 }
 footer.pp-reveal-footer {
     position: fixed;
